testsuite/poke.pkl/mul-strings-diag-1.pk
/* { dg-do compile } */

var s = "foo" * "bar"; /* { dg-error "" } */
